# QueensCORE

./: CMakeLists.txt  README.md  main.cpp  post_class.cpp  post_class.h  post_collection.cpp  post_collection.h  profile.cpp  profile.h  profileCollection.cpp  profileCollection.h  profile_class.cpp  profile_class.h  profile_collection.cpp  profile_collection.h  testing_for_post_collection.cpp
db/: Post.db  Profile.db
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  index.css  index.js  websocket.html
frontend/src/SourceFiles/: OIP.jfif
frontend/src/components/: App.css  CreatePost.js  Home.js  Navbar.js  PostStream.js  Profile.js  SignIn.js  testingJS.js
